--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -12,9 +12,11 @@
 
 {% include 'inc/_nav.html' %}
 
-
+<div class="container">
     {% block content %}
     {% endblock %}
+</div>
+
 
 </main>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
