--- a/mysite/user/templates/user/signin.html
+++ b/mysite/user/templates/user/signin.html
@@ -1,1 +1,9 @@
 {% extends 'base.html' %}
+{% block content %}
+<h2>Login</h2>
+<form action="{% url 'signin' %}" method="post">
+    {% csrf_token %}
+    {{ form }}
+    <input type="submit" value="Login">
+</form>
+{% endblock %}
