--- a/mysite/templates/inc/_nav.html
+++ b/mysite/templates/inc/_nav.html
@@ -8,7 +8,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         {% if request.user.is_authenticated %}
-            <li class="nav-item"><a class="nav-link" href="#">Schemas</a></li>
+            <li class="nav-item"><a class="nav-link" href="{% url 'schemas' %}">Schemas</a></li>
         {% endif %}
         </ul>
 
