--- a/mysite/scheme/templates/scheme/get_schemas.html
+++ b/mysite/scheme/templates/scheme/get_schemas.html
@@ -18,7 +18,7 @@
     {% for s in object_list %}
     <tr>
         <th scope="row">{{ s.id }}</th>
-        <td>{{ s.name }}</td>
+        <td><a href="{% url 'single_scheme' s.id %}">{{ s.name }}</a></td>
         <td>{{ s.created_at|date:"Y-m-d H:i" }}</td>
         <td>
             <span>
