--- a/mysite/scheme/templates/scheme/single.html
+++ b/mysite/scheme/templates/scheme/single.html
@@ -34,5 +34,5 @@
     </tbody>
 </table>
 </div>
-<h2><a href="#">Data sets</a></h2>
+<h2><a href="{% url 'data_sets' s.pk %}">Data sets</a></h2>
 {% endblock %}
