--- a/mysite/scheme/templates/scheme/data_sets.html
+++ b/mysite/scheme/templates/scheme/data_sets.html
@@ -1,4 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
+{% for i in queryset %}
+{% endfor %}
 <a href="{% url 'create_data_sets' pk %}">Create data set</a>
 {% endblock %}
