--- a/mysite/scheme/templates/scheme/data_sets.html
+++ b/mysite/scheme/templates/scheme/data_sets.html
@@ -1,6 +1,34 @@
 {% extends 'base.html' %}
 {% block content %}
-{% for i in queryset %}
-{% endfor %}
+<div class="col-md-9">
+<table class="table table-bordered">
+    <thead>
+    <tr>
+        <th scope="col">#</th>
+        <th scope="col">Created at</th>
+        <th scope="col">Status</th>
+        <th scope="col">Action</th>
+    </tr>
+    </thead>
+    <tbody>
+    {% for i in queryset %}
+    <tr>
+        <th scope="row">{{ i.id }}</th>
+        <td>{{ i.created_at|date:"Y-m-d H:i" }}</td>
+        <td>
+            {{ s.upload }}
+        </td>
+        <td>
+            {% if s.upload == '' or  s.upload == 'Processing' %}
+            {% else %}
+            <a class="nav-text" href="#" style="color: blue;">Download</a>
+            {% endif %}
+        </td>
+    </tr>
+    {% endfor %}
+    </tbody>
+</table>
+</div>
+
 <a href="{% url 'create_data_sets' pk %}">Create data set</a>
 {% endblock %}
