--- a/mysite/scheme/templates/scheme/create_set.html
+++ b/mysite/scheme/templates/scheme/create_set.html
@@ -3,10 +3,8 @@
 <form method="POST" action="{% url 'create_data_sets' pk %}">
     {% csrf_token %}
     <label for="rows" class="col-form-label">Rows </label>
-    <input type="number" name="rows" id="rows" class="form-control">
-    <button type="submit" class="btn btn-primary" style="color:white; background-color: black; border: black;">
-        Create data set
-    </button>
+    <input type="number" name="rows" id="rows">
+    <button type="submit" class="btn btn-success">Create data set</button>
 </form>
 
 {% endblock %}
