--- a/mysite/scheme/templates/scheme/load.html
+++ b/mysite/scheme/templates/scheme/load.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
 {{ s.upload.url }}
-<a href="{{ s.upload.url }}" download><button class="button">Download</button></a>
-<a href="C:\Users\Diana\DjangoProjects\Challenge\mysite{{ s.upload.url }}" download><button class="button">Download</button></a>
+<a href="{{ s.upload.url }}" download="" style="color: blue;">Download</a>
+<a href="C:\Users\Diana\DjangoProjects\Challenge\mysite{{ s.upload.url }}" download="" style="color: blue;">Download</a>
 {% endblock %}
