--- a/mysite/scheme/templates/scheme/single_generate.html
+++ b/mysite/scheme/templates/scheme/single_generate.html
@@ -35,7 +35,7 @@
 </div>
 <h2>Data sets</h2>
 <div class="col-md-9">
-<form method="POST" action="{% url 'single_generate' pk %}" style="float: right">
+<form method="POST" action="{% url 'single_scheme' pk %}" style="float: right">
     {% csrf_token %}
     <label for="rows" class="col-form-label">Rows: </label>
     <input type="number" name="rows" id="rows" style="width:70px">
@@ -58,12 +58,12 @@
         <th scope="row">{{ i.id }}</th>
         <td>{{ i.created_at|date:"Y-m-d H:i" }}</td>
         <td>
-            {{ s.upload }}
+            <button class="btn btn-success" disabled>Ready</button>
         </td>
         <td>
             {% if s.upload == '' or  s.upload == 'Processing' %}
             {% else %}
-            <a class="nav-text" href="{{ s.upload.url }}" style="color: blue;">Download</a>
+            <a class="nav-text" href="{{ s.upload.url }}" style="color: blue;" download="">Download</a>
             {% endif %}
         </td>
     </tr>
