add temp changes for logging generate data

--- a/mysite/scheme/templates/scheme/single_generate.html
+++ b/mysite/scheme/templates/scheme/single_generate.html
@@ -63,7 +63,7 @@
         <td>
             {% if s.upload == '' or  s.upload == 'Processing' %}
             {% else %}
-            <a class="nav-text" href="{{ s.upload.url }}" style="color: blue;" download="">Download</a>
+            <a class="nav-text" href="{{ s.upload }}" style="color: blue;" download="">Download</a>
             {% endif %}
         </td>
     </tr>
