add button download for dataset

--- a/mysite/scheme/templates/scheme/single_generate.html
+++ b/mysite/scheme/templates/scheme/single_generate.html
@@ -61,9 +61,9 @@
             <button class="btn btn-success" disabled>Ready</button>
         </td>
         <td>
-            {% if s.upload == '' or  s.upload == 'Processing' %}
+            {% if i.upload == '' or  i.upload == 'Processing' %}
             {% else %}
-            <a class="nav-text" href="{{ s.upload }}" style="color: blue;" download="">Download</a>
+            <a class="nav-text" href="{{ i.upload.url }}" style="color: blue;" download="">Download</a>
             {% endif %}
         </td>
     </tr>
