--- a/mysite/scheme/templates/scheme/add_scheme.html
+++ b/mysite/scheme/templates/scheme/add_scheme.html
@@ -1,6 +1,9 @@
 {% extends 'base.html' %}
+{% block title %}
+{{ title }} :: {{block.super }}
+{% endblock %}
 {% block content %}
-<h2>New schema</h2>
+<h2>{{ title }}</h2>
 
 <form style="LINE-HEIGHT: 20px;" method='POST' action="{% url 'add_scheme' %}">
     <button type="submit" class="btn btn-primary" style="float: right;">Submit</button>
