--- a/mysite/scheme/templates/scheme/single_generate.html
+++ b/mysite/scheme/templates/scheme/single_generate.html
@@ -1,4 +1,7 @@
 {% extends 'base.html' %}
+{% block title %}
+{{ s.name  }} :: {{block.super }}
+{% endblock %}
 {% block content %}
 <h2>{{ s.name }}</h2>
 <div class="col-md-6">
